# SaioMusic

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml
scripts/: bootstrap.ps1  check.ps1
src/saio_music/: __init__.py  __main__.py  cli.py
src/saio_music/ui/: __init__.py  main_window.py  widgets.py
